--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "doctrine/orm": "^2.5"
+        "doctrine/orm": "2.5.6"
     },
     "autoload": {
         "psr-4": { "Fridde\\": "src/" }
