--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "doctrine/orm": "2.5.6"
+        "php": ">=7.1.0",
+        "doctrine/orm": "^2.6"
     },
     "autoload": {
         "psr-4": { "Fridde\\": "src/" }
