--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "doctrine/orm": "^2.6"
+        "doctrine/orm": "2.6.*"
     },
     "autoload": {
         "psr-4": { "Fridde\\": "src/" }
