--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
-        "doctrine/orm": "2.6.*"
+        "php": ">=7.2",
+        "doctrine/orm": "2.7.*"
     },
     "autoload": {
         "psr-4": { "Fridde\\": "src/" }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require-dev": {
         "symfony/var-dumper": "^4.3@dev"
     }
